Add VSCode settings for Live Server configuration

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
+    // User Interface for Trip Manager 
+
     <div id="Main">
       <div id="Trip manager">
         <h1> Trip Manager</h1>
