Refactor HTML structure for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
 
-    // User Interface for Trip Manager 
+<!--User interface-->
 
-    <div id="Main">
+    <div id="Container">
       <div id="Trip manager">
         <h1> Trip Manager</h1>
       </div>
@@ -48,32 +48,22 @@
 
 
 
+    </div>
 
+<!--Output of logs-->
 
+    <div id="Output corner">
+      <div id="logs">
 
+      </div>
+      <div id="No">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      </div>
 
     </div>
 
 
-
+<script src="script.js"></script>
     
   </body>
 
