Fix background image URL and remove unnecessary background color from Container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <!--User interface-->
 
     <div id="Container">
-      <div id="Trip manager">
+      <div id="box">
+        <div id="Trip manager">
         <h1> Trip Manager</h1>
       </div>
 
@@ -47,6 +48,8 @@
 
 
 
+      </div>
+      
 
     </div>
 
