Add labels to input fields for better user guidance and enhance output message clarity

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
       </div>
 
       <div id="Country">
-        <label for="Country"></label>
+        <label for="Country">Which country did you visit?</label>
         <input type="text" id="Countrys" placeholder="Enter Country eg.Kenya">
       </div>
 
       <div id="Landmark">
-        <label for="Landmark"></label>
+        <label for="Landmark">Which landmark did you visit?</label>
         <input type="text" id="Landmarks" placeholder="Enter Landmark eg.Kenya National Museum">
       </div>
 
         <div id="Season">
-        <label for="Season"></label>
+        <label for="Season">During which Season was your trip?</label>
         <select id="Seasons" aria-placeholder="Enter Season">
           <option value="Summer">Summer</option>
           <option value="Winter">Winter</option>
@@ -37,7 +37,7 @@
       </div>
 
       <div>
-        <label for="Trip Description"></label>
+        <label for="Trip Description">Describe your trip?</label>
         <input type="text" id="Description" placeholder="Enter Trip Description">
       </div>
 
@@ -60,6 +60,9 @@
 
       </div>
       <div id="No">
+        <p id="NoTrips">
+          No trips added yet. <br>Please add a trip to see the logs.
+        </p>
 
       </div>
 
