Add onclick event to Add Trip button for trip submission functionality

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
 
       <div>
-        <button id="Add">Add Trip</button>
+        <button id="Add" onclick="Tripadd">Add Trip</button>
       </div>
 
 
